# inspectai-app-example

./: .gitignore  CLAUDE.md  Makefile  api.Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  ui.Dockerfile
src/api/: __init__.py  main.py  settings.py
src/api/utilities/: __init__.py  datasets.py
src/ui/: __init__.py  app.py  settings.py
src/ui/utilities/: api_functions.py
