[project]
name = "inspectai-app-example"
version = "0.1.0"
description = "A simple example of building an app that uses the Inspect framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "fastapi>=0.123.5",
    "inspect-ai>=0.3.151",
    "ruff>=0.14.7",
    "streamlit>=1.40.0",
    "uvicorn>=0.30.0",
]
